--- a/deel-2-flexbox-layout/opdracht-3/index.html
+++ b/deel-2-flexbox-layout/opdracht-3/index.html
@@ -10,17 +10,17 @@
 <nav class="col-1">Nav</nav>
 <div class="col-2">
     <header>Header</header>
-    <main>
-        <article>
+    <main class="section-wrapper">
+        <article class="section section-article">
             Article
-            <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
         </article>
-        <aside>Aside</aside>
+        <aside class="section section-aside">Aside</aside>
     </main>
     <footer>Footer</footer>
 </div>
