--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,27 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+<header class="header-section" >
+    <div class="header-container">
+        <h1 class="header-title">All Your Business Data in One Place</h1>
+        <h3 class="header-subtitle">Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
     </div>
+</header>
+<main class="main-section">
+    <div class="main-container">
+        <article class="item">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda culpa cupiditate dolores
+                eveniet inventore iusto maiores modi molestiae molestias, neque nostrum odio pariatur recusandae
+                temporibus ut voluptates, voluptatum.</p>
+        </article>
+        <article class="item"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda culpa cupiditate dolores
+            eveniet inventore iusto maiores modi molestiae molestias, neque nostrum odio pariatur recusandae
+            temporibus ut voluptates, voluptatum.</p></article>
+        <article class="item"> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda culpa cupiditate dolores
+            eveniet inventore iusto maiores modi molestiae molestias, neque nostrum odio pariatur recusandae
+            temporibus ut voluptates, voluptatum.</p></article>
+    </div>
+</main>
 </body>
 </html>
