--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -9,14 +9,25 @@
 <body>
 <header class="header-section">
     <div class="header-container">
-        <h1 class="header-title">All Your Business Data in One Place</h1>
-        <h3 class="header-subtitle">Sync and store all your business data. Explore your data with SQL or visualize it
-            with your favorite BI or
-            analytics tools.</h3>
+        <span class="header-title">Analytica</span>
+        <nav class="header-nav">
+            <ul>
+                <li class="nav-item">About us</li>
+                <li class="nav-item">Strategy</li>
+                <li class="nav-item">Prices</li>
+                <li class="nav-item">Contact</li>
+            </ul>
+        </nav>
     </div>
 </header>
 <main class="main-section">
-    <div class="main-container">
+    <div class="main-container-top">
+        <h1 class="main-title">All Your Business Data in One Place</h1>
+        <h3 class="main-subtitle">Sync and store all your business data. Explore your data with SQL or visualize it
+            with your favorite BI or
+            analytics tools.</h3>
+    </div>
+    <div class="main-container-bottom">
         <article class="item">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aspernatur assumenda culpa cupiditate dolores
                 eveniet inventore iusto maiores modi molestiae molestias, neque nostrum odio pariatur recusandae
