update 04-12 deel-3 webpagina deel2

--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -12,10 +12,10 @@
         <span class="header-title">Analytica</span>
         <nav class="header-nav">
             <ul>
-                <li class="nav-item">About us</li>
-                <li class="nav-item">Strategy</li>
-                <li class="nav-item">Prices</li>
-                <li class="nav-item">Contact</li>
+                <li class="nav-item"><a href="#">About us</a></li>
+                <li class="nav-item"><a href="#">Strategy</a></li>
+                <li class="nav-item"><a href="#">Prices</a></li>
+                <li class="nav-item"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </div>
